<resources>
    <string name="app_name">BroadcastRec</string>
    <string name="check_connectivity">Check Connectivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">SEND</string>
    <string name="save">SAVE</string>
    <string name="stop">Stop</string>
    <string name="start_music">START MUSIC</string>
    <string name="forpattern">ForPattern</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="SendData">Send</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_open_drawer">Open navigation drawer</string>
    <string name="navigation_close_drawer">Close navigation drawer</string>
    <string name="is_empty">isEmpty</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="profile_fragment">Profile fragment</string>

</resources>