<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_profile_24"
            android:title="@string/profile" />


    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/SendData" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />
        </menu>
    </item>
</menu>